--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ai-sdk/google": "^2.0.6",
     "@ai-sdk/openai": "^2.0.15",
     "@ai-sdk/react": "^2.0.15",
+    "@hookform/resolvers": "^5.2.1",
     "ai": "^5.0.15",
     "clsx": "^2.1.1",
     "localforage": "^1.10.0",
@@ -21,6 +22,7 @@
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.62.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.0.17",
     "zustand": "^5.0.7"
