--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@ai-sdk/anthropic": "^2.0.4",
     "@ai-sdk/google": "^2.0.6",
     "@ai-sdk/openai": "^2.0.15",
+    "@ai-sdk/openai-compatible": "^1.0.8",
     "@ai-sdk/react": "^2.0.15",
+    "@google/genai": "^1.14.0",
     "@hookform/resolvers": "^5.2.1",
     "ai": "^5.0.15",
     "clsx": "^2.1.1",
@@ -20,6 +22,7 @@
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
     "next-themes": "^0.4.6",
+    "openai": "^5.12.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
