--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@ai-sdk/react": "^2.0.15",
     "@google/genai": "^1.14.0",
     "@hookform/resolvers": "^5.2.1",
+    "@openrouter/ai-sdk-provider": "^1.1.2",
     "ai": "^5.0.15",
     "clsx": "^2.1.1",
     "localforage": "^1.10.0",
