--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@openrouter/ai-sdk-provider": "^1.1.2",
     "ai": "^5.0.15",
     "clsx": "^2.1.1",
+    "katex": "^0.16.22",
     "localforage": "^1.10.0",
     "lucide-react": "^0.539.0",
     "marked": "^16.2.0",
@@ -28,7 +29,11 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
+    "react-katex": "^3.1.0",
     "react-markdown": "^10.1.0",
+    "rehype-katex": "^7.0.1",
+    "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.0.17",
     "zustand": "^5.0.7"
@@ -37,9 +42,11 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/katex": "^0.16.7",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-katex": "^3.0.4",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
     "tailwindcss": "^4",
