--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,5 @@
-name = "profile-quiz"
-compatibility_date = "2025-05-05"
-workers_dev = false
+name = "simple-chat"
+compatibility_date = "2025-08-15"
 
 [assets]
 directory = "./out"
