--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@openrouter/ai-sdk-provider": "^1.1.2",
     "ai": "^5.0.15",
     "clsx": "^2.1.1",
+    "idb-keyval": "^6.2.2",
     "katex": "^0.16.22",
     "localforage": "^1.10.0",
     "lucide-react": "^0.539.0",
