--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-hotkeys-hook": "^5.1.0",
     "react-katex": "^3.1.0",
     "react-markdown": "^10.1.0",
+    "react-use": "^17.6.0",
     "rehype-katex": "^7.0.1",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
