--- a/package.json
+++ b/package.json
@@ -6,29 +6,29 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint ."
   },
   "dependencies": {
-    "@ai-sdk/anthropic": "^2.0.4",
-    "@ai-sdk/google": "^2.0.6",
-    "@ai-sdk/openai": "^2.0.15",
-    "@ai-sdk/openai-compatible": "^1.0.8",
-    "@ai-sdk/react": "^2.0.15",
-    "@google/genai": "^1.14.0",
+    "@ai-sdk/anthropic": "^2.0.5",
+    "@ai-sdk/google": "^2.0.7",
+    "@ai-sdk/openai": "^2.0.16",
+    "@ai-sdk/openai-compatible": "^1.0.10",
+    "@ai-sdk/react": "^2.0.18",
+    "@google/genai": "^1.15.0",
     "@hookform/resolvers": "^5.2.1",
     "@openrouter/ai-sdk-provider": "^1.1.2",
-    "ai": "^5.0.15",
+    "ai": "^5.0.18",
     "clsx": "^2.1.1",
     "idb-keyval": "^6.2.2",
     "katex": "^0.16.22",
     "localforage": "^1.10.0",
-    "lucide-react": "^0.539.0",
+    "lucide-react": "^0.540.0",
     "marked": "^16.2.0",
-    "next": "15.4.6",
+    "next": "15.5.0",
     "next-themes": "^0.4.6",
-    "openai": "^5.12.2",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "openai": "^5.13.1",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
     "react-hook-form": "^7.62.0",
     "react-hotkeys-hook": "^5.1.0",
     "react-katex": "^3.1.0",
@@ -40,19 +40,19 @@
     "remark-math": "^6.0.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.0.17",
-    "zustand": "^5.0.7"
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@tailwindcss/typography": "^0.5.16",
     "@types/katex": "^0.16.7",
-    "@types/node": "^20",
+    "@types/node": "^24",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-katex": "^3.0.4",
     "eslint": "^9",
-    "eslint-config-next": "15.4.6",
+    "eslint-config-next": "15.5.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
