--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-katex": "^3.1.0",
     "react-markdown": "^10.1.0",
     "react-use": "^17.6.0",
+    "rehype-highlight": "^7.0.2",
     "rehype-katex": "^7.0.1",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
