--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "remark-gfm": "^4.0.1",
     "remark-math": "^6.0.0",
     "tailwind-merge": "^3.3.1",
+    "use-sync-external-store": "^1.5.0",
     "zod": "^4.0.17",
     "zustand": "^5.0.8"
   },
