--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@openrouter/ai-sdk-provider": "^1.1.2",
     "ai": "^5.0.18",
     "clsx": "^2.1.1",
+    "fast-equals": "^5.2.2",
     "idb-keyval": "^6.2.2",
     "katex": "^0.16.22",
     "localforage": "^1.10.0",
