--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^2.0.5",
+    "@ai-sdk/deepseek": "^1.0.11",
     "@ai-sdk/google": "^2.0.7",
+    "@ai-sdk/groq": "^2.0.13",
+    "@ai-sdk/mistral": "^2.0.8",
     "@ai-sdk/openai": "^2.0.16",
     "@ai-sdk/openai-compatible": "^1.0.10",
     "@ai-sdk/react": "^2.0.18",
