--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@ai-sdk/react": "^2.0.18",
     "@google/genai": "^1.15.0",
     "@hookform/resolvers": "^5.2.1",
+    "@lobehub/icons": "^2.29.1",
     "@openrouter/ai-sdk-provider": "^1.1.2",
     "ai": "^5.0.18",
     "clsx": "^2.1.1",
