--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@hookform/resolvers": "^5.2.1",
     "@lobehub/icons": "^2.29.1",
     "@openrouter/ai-sdk-provider": "^1.1.2",
+    "@use-gesture/react": "^10.3.1",
     "ai": "^5.0.18",
     "clsx": "^2.1.1",
     "fast-equals": "^5.2.2",
