--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "tailwind-merge": "^3.3.1",
     "use-sync-external-store": "^1.5.0",
     "zod": "^4.0.17",
-    "zustand": "^5.0.8"
+    "zustand": "^5.0.8",
+    "unpdf": "^1.2.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
