--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@ai-sdk/openai": "^2.0.23",
     "@ai-sdk/openai-compatible": "^1.0.13",
     "@ai-sdk/react": "^2.0.28",
+    "@floating-ui/react": "^0.27.16",
+    "@floating-ui/react-dom": "^2.1.6",
     "@google/genai": "^1.16.0",
     "@hookform/resolvers": "^5.2.1",
     "@lobehub/icons": "^2.30.0",
@@ -46,10 +48,10 @@
     "remark-gfm": "^4.0.1",
     "remark-math": "^6.0.0",
     "tailwind-merge": "^3.3.1",
+    "unpdf": "^1.2.2",
     "use-sync-external-store": "^1.5.0",
     "zod": "^4.1.5",
-    "zustand": "^5.0.8",
-    "unpdf": "^1.2.2"
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
