--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-hotkeys-hook": "^5.1.0",
     "react-katex": "^3.1.0",
     "react-markdown": "^10.1.0",
+    "react-photo-view": "^1.2.7",
     "react-use": "^17.6.0",
     "rehype-highlight": "^7.0.2",
     "rehype-katex": "^7.0.1",
