--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ai": "^5.0.28",
     "clsx": "^2.1.1",
     "fast-equals": "^5.2.2",
+    "fuse.js": "^7.1.0",
     "idb-keyval": "^6.2.2",
     "katex": "^0.16.22",
     "localforage": "^1.10.0",
