--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@hookform/resolvers": "^5.2.2",
     "@lobehub/icons": "^2.33.0",
     "@openrouter/ai-sdk-provider": "^1.2.0",
+    "@react-oauth/google": "^0.12.2",
     "@use-gesture/react": "^10.3.1",
     "ai": "^5.0.48",
     "clsx": "^2.1.1",
